<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddMovimentacaoActivity">
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/idInputValor" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/idInputDescricao" app:layout_constraintHorizontal_bias="0.0">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descrição" style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                android:inputType="text" android:id="@+id/idEditTextDescricao" android:textAlignment="viewStart"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/idInputNome"
    >

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome" style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                android:id="@+id/idEditTextNome" android:inputType="text" android:textAlignment="viewStart"
                android:selectAllOnFocus="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="94dp"
            android:id="@+id/idInputValor"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/idInputNome">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor" style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                android:id="@+id/idEditTextValor" android:inputType="number|numberDecimal"
                android:textAlignment="viewStart"/>
    </android.support.design.widget.TextInputLayout>
    <RadioGroup
            android:layout_width="142dp"
            android:layout_height="106dp"
            android:id="@+id/idRadioGroup" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/idInputDescricao" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">
        <RadioButton
                android:text="@string/em_andamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idRadioButton2" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/idRadioButton" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.003"
                style="@android:style/Widget.Material.Light.CompoundButton.RadioButton"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" android:checked="true"
                android:textColorLink="@color/colorPrimary"/>
        <RadioButton
                android:text="@string/concluido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idRadioButton" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/idInputDescricao"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                style="@android:style/Widget.Material.Light.CompoundButton.RadioButton"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textAlignment="viewStart"
                android:textColorLink="@color/colorPrimary"/>
    </RadioGroup>
    <Button
            android:text="@string/adicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            style="@android:style/Widget.Material.Light.Button.Borderless" android:textAlignment="center"
            android:onClick="adicionarMovimentacao"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/button2"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/idRadioGroup"/>
    <Button
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:textAlignment="center" android:onClick="cancelarMovimentacao"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.723"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/idRadioGroup"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/criar_nova_movimenta_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTextView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/idInputNome"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>